^ -> Change
- -> Removed
! -> Note

24-Dec-2010 Christophe Demko
 # [#23857] thrice Recipient!!
 # [#23956] Beez20 string name issues (bill richardson, Edgars Piruška)
 # [#23923] PHP Strict validation in session classes (Rune Sjøen)
 # [#23789] Typo in sample data (Ramindu Deshapriya)
 # [#23784] Template editor background missing with bluestork (bill richardson,	Ramindu Deshapriya)

24-Dec-2010 Jean-Marie Simonet
 # [#23868] FTP not implemented for template source edit
 +$ [#23926] Missing help screen reference
 # [#23949] Issue with multilanguage and editing articles in frontend. Thanks Christophe.
 $ [#23960] Typo in Article Options. Thanks Bill

23-Dec-2010 Jean-Marie Simonet
 # [#23945] Remove hardcoded color. Thanks Andrea
 # [#23925] Update obsolete CSS cursor notation. Thanks Andrea
 $ [#23931] Untranslated String in en-GB.com_banners.ini. Thanks Bill
 $ [#23930] Untranslated String in en-GB.com_categories.ini. Thanks Bill
 $ [#23928] Bad translation in Weblink Component. Thanks Bill.
 
21-Dec-2010 Christophe Demko
 # [#23894] Components menu item visible in disabled menu (Sander Potjer)
 # [#23782] [PATCH] Fix router calls for components containing hyphens and full stops. (Tom Lee)
 # [#23811] PHP Strict Compatibility (Elin Waring, Rune Sjøen)
 ^ [#23877] Improve how HTML entities in meta data are handled (Rouven Weßling)
 ^ [#23879] Remove a workaround around a PHP4 limitation (Rouven Weßling)
 # [#23601] When creating an account keeps saying email adress already exists (Ian MacLennan)
 # [#23761] AutoLoader (Mathieu Delisle, Rune Sjøen)
 # [#23838] JCacheStorage should not extend JObject PHP Strict issue (Elin Waring)

20-Dec-2010 Jean-Marie Simonet
 # [#23903] Menu item type external url issues

19-Dec-2010 Jean-Marie Simonet
 # [#23819] Self-Registering Users aren't assigned any usergroup. Thanks Elin.
 # [#22982] fix: JURI::root(true) -> JURI::root() (template preview). Thanks Rune.
 # [#23889] Action ordering com_users. Thanks Sander.